# DropOut

./: .env.example  .gitignore  LICENSE  README.CN.md  README.md  biome.json  package-lock.json  package.json  pnpm-lock.yaml
.changes/: config.toml  docs-lint.md  effect-check.md  game-store.md  instance-layout.md  logo.md  particle-background.md  remove-store.md  rewrite-instance-create.md  toast.md  update-dependence.md  vite-tauri.md
.github/workflows/: check.yml  docs-build.yml
src-tauri/: CHANGELOG.md  Cargo.toml  build.rs  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: main.rs
src-tauri/src/core/: instance.rs  modpack.rs
src-tauri/src/core/modpack/: api.rs  archive.rs  curseforge.rs  extractor.rs  mod.rs  parser.rs  resolver.rs  types.rs
src-tauri/src/core/modpack/formats/: curseforge.rs  mod.rs  modrinth.rs  multimc.rs
