[package]
name = "dropout"
version = "0.2.0-alpha.5"
edition = "2024"
authors = ["HsiangNianian"]
description = "The DropOut Minecraft Game Launcher"
repository = "https://github.com/HydroRoll-Team/DropOut"
license = "MIT"

[package.metadata.deb]
depends = "libgtk-3-0"
section = "games"
assets = [
  ["target/release/dropout", "usr/bin/", "755"],
]

[dependencies]
bytes = "1.11.0"
chrono = "0.4"
dirs = "5.0"
dropout-macros = { path = "../crates/macros", version = "0.1.0-alpha.0" }
env_logger = "0.9"
flate2 = "1.0"
futures = "0.3"
hex = "0.4"
log = "0.4"
regex = "1.12.2"
reqwest = { version = "0.11", features = [
  "blocking",
  "json",
  "multipart",
  "stream"
] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0.149"
serde_urlencoded = "0.7.1"
sha1 = "0.10"
sha2 = "0.10"
tar = "0.4"
tauri = { version = "2.9", features = [] }
tauri-plugin-dialog = "2.6.0"
tauri-plugin-fs = "2.4.5"
tauri-plugin-shell = "2.3"
tokio = { version = "1.49.0", features = ["full"] }
toml = "0.5"
ts-rs = { version = "11.1.0", features = ["serde-compat"] }
uuid = { version = "1.10.0", features = ["serde", "v3", "v4"] }
zip = "2.2.2"

[dev-dependencies]
ctor = "0.6.3"
inventory = "0.3.21"

[build-dependencies]
dotenvy = { version = "0.15", default-features = false }
tauri-build = { version = "2.0", features = [] }

[target.'cfg(all(windows, target_env = "gnu"))'.build-dependencies]
embed-resource = "2.4"
